--- a/hacktoberfest/index.html
+++ b/hacktoberfest/index.html
@@ -15,9 +15,10 @@
                 <li><a href="#">Resources</a></li>
                 <li><a href="#">Events</a>
                     <ul>
-                        <li>All Events</li>
-                        <li>Event Organizer Kit</li>
-                    </ul></li>
+                        <li><a href="#">All Events</a></li>
+                        <li><a href="#">Event Organizer Kit</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Giving</a></li>
                 <li><a href="#">FAQ</a></li>
             </ul>
